added new attr on properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-tableau.endpoints: "https://run.mocky.io/v3"
-tableau.path.authentication:"https://run.mocky.io/v3/a0d4d954-5e06-42df-97f1-392cc723c723"
-tableau.path:"/2220fc04-ac9c-4123-b4e1-b3b628cf107d"
-tableau.user:${TABLEAU_USERNAME}
-tableau.pass:${TABLEAU_PASS}
+tableau.endpoints=https://run.mocky.io/v3
+tableau.authentication=https://run.mocky.io/v3/a0d4d954-5e06-42df-97f1-392cc723c723
+tableau.path=/2220fc04-ac9c-4123-b4e1-b3b628cf107d
+tableau.user=${TABLEAU_USERNAME}
+tableau.pass=${TABLEAU_PASS}
